History of feedfeeder
=====================

1.0rc5 (unreleased)
-------------------

- Nothing changed yet.


1.0rc4 (2009-06-18)
-------------------

- When both the updated and published date of an item is not known,
  take today as the date when first adding it.  When updating, do not
  change the original item.
  Fixes http://plone.org/products/feedfeeder/issues/21
  [maurits]

- Read tags/categories/keywords of feed items and store them on the
  created content item.  No Archetypes field, just a simple getter and
  setter called feed_tags.   Idea: Robin Harms Oredsson.
  [maurits]

- DateTime.SyntaxError is thrown with some very common US 
  Daylight Saving zones, such as EDT. We now wrap the DateTime parsing
  of feeds, to try to recognise those zones before politely giving up, using 
  maurits' fix, below.
  [russf]
  
- Catch DateTime.SyntaxError when parsing the updated and published
  dates of an entry and continue with the next entry.
  Fixes http://plone.org/products/feedfeeder/issues/18
  [maurits]

- Avoid swallowing too much exceptions when applying our GenericSetup
  profile.
  Fixes http://plone.org/products/feedfeeder/issues/19
  [maurits]

1.0rc3 (2008-10-04)
-------------------

- Moved profile definition from python to GenericSetup.  Profile is
  now not 'profile-feedfeeder:default' but
  'profile-Products.feedfeeder:default'.  [maurits]

- In the Extensions/ dir: removed Install.py and renamed AppInstall.py
  to install.py.  [maurits]

- Made feed item updated date available for Collections/Smart Folders.
  [maurits]

- Extensions/AppInstall.py: first try installing our own profile in
  the Plone 3 way and when that fails try the Plone 2.5 way.
  [maurits]

- Removed own feedparser.py.  Instead added an install_requires
  dependency on FeedParser in setup.py.  [maurits]

- Moved fix for feeds starting with 'feed:' instead of 'http:' from
  feedparser.py to utilities.py, so we use an unchanged feedparser.py
  again.  [maurits]

