@@ -2,10 +2,7 @@
 <object name="portal_skins">
  <object name="feedfeeder" meta_type="Filesystem Directory View"
     directory="feedfeeder/skins/feedfeeder"/>
- <skin-path name="Plone Default">
-  <layer name="feedfeeder"/>
- </skin-path>
- <skin-path name="Plone Tableless">
+ <skin-path name="*">
   <layer name="feedfeeder"/>
  </skin-path>
 </object>
