@@ -4,7 +4,8 @@ History of feedfeeder
 1.0rc5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Do not add our skin layer to Plone Default and certainly not to
+  Plone Tableless, but just to all (*).  [maurits]
 
 
 1.0rc4 (2009-06-18)
